Bug 324155 - dbus interface for opening a wallet is missing / provide shortcut to open a wallet
Summary: dbus interface for opening a wallet is missing / provide shortcut to open a w...
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.10
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-28 09:40 UTC by Till Schäfer
Modified: 2013-09-02 19:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Till Schäfer 2013-08-28 09:40:21 UTC
I used to have a qdbus script to quickly open a certain wallet: 

qdbus org.kde.kwalletmanager /kwalletmanager/MainWindow_1 org.kde.kwallet.kwalletmanager.openWallet "$1"

however since kde-4.11 this option is removed. (most likely because of the redesign of the manager, which btw. improves the usability a lot :) 

the qdbus command should be restored and it would be very nice to have a gui option to assign a shortcut für quick opening a wallet. 

Reproducible: Always
Comment 1 Christoph Feck 2013-08-28 13:04:31 UTC
From what I see, no commit should have removed D-Bus support, so it's a regression.
Comment 2 Valentin Rusu 2013-09-02 19:28:22 UTC
Git commit 16014325a5120c488947d1651e3430d1b5a9639b by Valentin Rusu.
Committed on 02/09/2013 at 19:26.
Pushed by vrusu into branch 'master'.

Restore the wallet_open scrpipting slot

The UI refactor left a TODO item for this and seems people is using
it, so here is it :)

M  +6    -2    src/manager/kwalletmanager.cpp
M  +11   -0    src/manager/kwalletmanagerwidget.cpp
M  +1    -0    src/manager/kwalletmanagerwidget.h
M  +5    -0    src/manager/kwalletmanagerwidgetitem.cpp
M  +1    -0    src/manager/kwalletmanagerwidgetitem.h
M  +13   -0    src/manager/walletcontrolwidget.cpp
M  +2    -0    src/manager/walletcontrolwidget.h

http://commits.kde.org/kwallet/16014325a5120c488947d1651e3430d1b5a9639b