Restore the wallet_open scrpipting slot

BUG:324155

The UI refactor left a TODO item for this and seems people is using
it, so here is it :)